--- a/preamble.sty
+++ b/preamble.sty
@@ -28,9 +28,9 @@
 
 %%%%%  Definitions %%%%%
 \def\mydate                 {\today}
-\def\mytitle                {Logic for Security Assignment 1}
-\def\mycourseno             {02244}
-\def\mycourse               {Logic for Security}
-\def\myschool               {DTU Compute}
+\def\mytitle                {Document name, see preamble}
+\def\mycourseno             {00000}
+\def\mycourse               {Course}
+\def\myschool               {DTU }
 \lhead{\mycourseno\,-\,\mycourse}
 \rhead{\mydate{}}
